--- a/scratch/angular/teste-angular/src/app/app.component.html
+++ b/scratch/angular/teste-angular/src/app/app.component.html
@@ -1,5 +1,8 @@
 <main>
   <h1>Angular Teste</h1>
   <p>{{ count }}</p>
-  <button @click="increment()">Increment</button>  
+  <div>
+    <img alt="teste" src="assets/img/angular.png" />
+  </div>
+  <button (click)="increment()">Increment</button>  
 </main>
