--- a/examples/angular/angular-app-v1/src/app/app.component.html
+++ b/examples/angular/angular-app-v1/src/app/app.component.html
@@ -1,3 +1,6 @@
 <main>
-  <h2>Novo projeto, {{ title }}</h2>
+  <h2 class="text-red-800">Novo projeto, {{ title }}</h2>
+
+  <app-contador></app-contador>
+  
 </main>
