--- a/scratch/angular/teste-angular/src/app/app.component.html
+++ b/scratch/angular/teste-angular/src/app/app.component.html
@@ -1,8 +1,45 @@
-<main>
-  <h1>Angular Teste</h1>
-  <p>{{ count }}</p>
-  <div>
-    <img alt="teste" src="assets/img/angular.png" />
+<div class="container mx-auto lg:max-w-screen-lg">
+  <h1 class="text-center text-2xl my-12 font-bold">Investimentos</h1>
+  <div class="investments grid grid-cols-3 gap-3">
+    <!-- Card -->
+    <div id="investment-${investment.id}" class="bg-white shadow-md rounded-lg p-4">
+      <div class="flex justify-between items-center">
+        <h3 class="text-lg font-semibold text-gray-700">
+          Tesouro Selic 2029
+        </h3>
+        <p class="text-lg font-semibold text-gray-700">
+          {{ formatCurrency(50050) }}
+        </p>
+      </div>
+      <div class="mt-4">
+        <p class="text-sm text-gray-500">
+          <span class="font-bold">Origem:</span>
+          Tesouro Nacional
+        </p>
+        <p class="text-sm text-gray-500">
+          <span class="font-bold">Categoria:</span>
+          Pos
+        </p>
+        <p class="text-sm text-gray-500">
+          <span class="font-bold">Data:</span>
+          {{ formatDate('2023-10-01') }}
+        </p>
+        <p class="text-sm text-gray-500">
+          <span class="font-bold">Taxa:</span>
+          100% Selic
+        </p>
+      </div>
+    </div>
   </div>
+</div>
+
+
+<hr />
+<main>
+  <p>{{ count() }}</p>
+  <p>{{ doubleCount() }}</p>
+  <!-- <div>
+    <img alt="teste" src="angular.png" />
+  </div> -->
   <button (click)="increment()">Increment</button>  
 </main>
