--- a/examples/angular/notificao-transito-angular/src/notificacao-card/notificacao-card.component.html
+++ b/examples/angular/notificao-transito-angular/src/notificacao-card/notificacao-card.component.html
@@ -2,7 +2,7 @@
     class="bg-white rounded-xl shadow-sm hover:shadow-md transition-all duration-300 p-6 relative hover:translate-y-[-4px]">
     <h2 class="text-xl font-semibold mb-4 text-secondary">Notificação de Multa</h2>
 
-    <div class="grid grid-cols-[auto,1fr] gap-y-2 gap-x-4 mb-4">
+    <div class="grid grid-cols-[auto_1fr] gap-y-2 gap-x-4 mb-4">
         <span class="text-sm text-gray-500 font-medium">Placa:</span>
         <span class="text-sm">{{ placa() }}</span>
 
@@ -19,5 +19,5 @@
     <div class="text-sm text-gray-500 font-medium mb-1">Descrição:</div>
     <div class="text-sm text-gray-700 leading-relaxed">{{ descricao() }}</div>
 
-    <div class="absolute bottom-4 right-4 w-3 h-3 rounded-full ${tipoIndicatorClass}"></div>
+    <div class="absolute bottom-4 right-4 w-3 h-3 rounded-full bg-multa"></div>
 </div>
