--- a/examples/angular/notificao-transito-angular/src/notificacao-card/notificacao-card.component.html
+++ b/examples/angular/notificao-transito-angular/src/notificacao-card/notificacao-card.component.html
@@ -7,7 +7,7 @@
         <span class="text-sm">{{ placa() }}</span>
 
         <span class="text-sm text-gray-500 font-medium">CPF:</span>
-        <span class="text-sm">{{ cpf() }}</span>
+        <span class="text-sm">{{ formatarCPF() }}</span>
 
         <span class="text-sm text-gray-500 font-medium">Data:</span>
         <span class="text-sm">{{ dataNotificacao() }}</span>
