--- a/scratch/angular/teste-angular/src/app/app.component.html
+++ b/scratch/angular/teste-angular/src/app/app.component.html
@@ -42,4 +42,8 @@
     <img alt="teste" src="angular.png" />
   </div> -->
   <button (click)="increment()">Increment</button>  
+  
+  
+  <hr />
+  <app-counter [(contador)]="initialCount"></app-counter>
 </main>
