--- a/scratch/angular/notificacao-transito-angular-scratch/src/notificacao-card/notificacao-card.component.html
+++ b/scratch/angular/notificacao-transito-angular-scratch/src/notificacao-card/notificacao-card.component.html
@@ -19,5 +19,6 @@
     <div class="text-sm text-gray-500 font-medium mb-1">Descrição:</div>
     <div class="text-sm text-gray-700 leading-relaxed">{{ descricao() }}</div>
 
-    <div class="absolute bottom-4 right-4 w-3 h-3 rounded-full {{ tipoIndicadorClass() }}"></div>
+    <div class="absolute bottom-4 right-4 w-3 h-3 rounded-full {{ tipoIndicadorClass() }}"
+    (click)="handleClick()"></div>
 </div>
