--- a/examples/angular/notificao-transito-angular/src/notificacao-card/notificacao-card.component.html
+++ b/examples/angular/notificao-transito-angular/src/notificacao-card/notificacao-card.component.html
@@ -1,5 +1,5 @@
 <div
-    class="bg-white rounded-xl shadow-sm hover:shadow-md transition-all duration-300 p-6 relative hover:translate-y-[-4px]">
+    class="bg-white rounded-xl shadow-sm hover:shadow-md transition-all duration-300 p-6 relative hover:translate-y-[-4px] h-full">
     <h2 class="text-xl font-semibold mb-4 text-secondary">Notificação de Multa</h2>
 
     <div class="grid grid-cols-[auto_1fr] gap-y-2 gap-x-4 mb-4">
