feat: formulários em angular

--- a/scratch/angular/contador-app/src/app/app.component.html
+++ b/scratch/angular/contador-app/src/app/app.component.html
@@ -6,4 +6,11 @@
 
   <p>Contador: {{ novoValor() }}</p>
 
+  <hr/>
+  <form-builder />
+  <hr/>
+  <validation-form />
+  <hr/>
+  <form-custom-validation />
+
 </main>
