--- a/scratch/angular/contador-app/src/app/contador/contador.component.html
+++ b/scratch/angular/contador-app/src/app/contador/contador.component.html
@@ -1,12 +1,42 @@
-<h2>Valor: {{ countValue() }}</h2>
+<div class="text-center space-y-4">
+  <h2 class="text-2xl font-bold text-gray-800">Valor: {{ countValue() }}</h2>
 
-<button type="button" (click)="incrementar(1)" style="margin-right: 10px;">Incrementar</button>
-<button type="button" (click)="decrementar(1)">Decrementar</button>
+  <div class="flex justify-center space-x-4">
+    <button 
+      type="button" 
+      (click)="incrementar()" 
+      class="bg-green-500 hover:bg-green-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2"
+    >
+      + {{ step() }}
+    </button>
+    <button 
+      type="button" 
+      (click)="decrementar()" 
+      class="bg-red-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-offset-2"
+    >
+      - {{ step() }}
+    </button>
+  </div>
 
-<hr/>
+  <hr class="border-gray-300 my-4"/>
+<!-- 
+  <div class="space-y-3">
+    <input 
+      type="text" 
+      [formControl]="inputValue" 
+      placeholder="Digite um valor" 
+      class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500"
+    />
 
-<input type="text" [formControl]="inputValue" placeholder="Digite um valor" />
-
-<p>{{ inputValue.value | uppercase }}</p>
-<p>{{ toUpperCaseInput() }}</p>
-<button (click)="inputValue.setValue('')">Resetar</button>
+    <p class="text-gray-600">{{ inputValue.value | uppercase }}</p>
+    <p class="text-gray-600">{{ toUpperCaseInput() }}</p>
+    
+    <button 
+      (click)="inputValue.setValue('')"
+      class="bg-gray-500 hover:bg-gray-600 text-white font-semibold py-1 px-3 rounded transition-colors focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2"
+    >
+      Resetar
+    </button>
+  </div>
+-->
+</div>
