--- a/scratch/angular/app-formularios/src/styles.css
+++ b/scratch/angular/app-formularios/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+div {
+  margin: 5px 0;
+}
+
+input {
+  width: 190px;
+}
