Rotas em angular

--- a/scratch/angular/user-http-client/src/app/app.component.html
+++ b/scratch/angular/user-http-client/src/app/app.component.html
@@ -1,8 +1,6 @@
 <main>
-  <h1>Dashboard de Usuários</h1>
-
-  <create-user-form />
-  <hr/>
-
-  <user-list />
+  <h1>Dashboard</h1>
+  <hr>
+  
+  <router-outlet />
 </main>
