--- a/examples/angular/http-client-users/src/app/app.component.html
+++ b/examples/angular/http-client-users/src/app/app.component.html
@@ -1,6 +1,11 @@
+<style>
+  a {
+    margin-right: 10px;
+  }
+</style>
 <main>
   <h1>Dashboard</h1>
-  <create-user-form />
   <hr>
-  <list-users-component />
+  <router-outlet /> <!-- Componente será renderizado aqui! -->
+  
 </main>
